--- a/Template/Template.csproj
+++ b/Template/Template.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="Discord.Net.Commands" Version="2.2.0" />
       <PackageReference Include="Discord.Net.Core" Version="2.2.0" />
       <PackageReference Include="Discord.Net.WebSocket" Version="2.2.0" />
+      <PackageReference Include="Google.Apis.Sheets.v4" Version="1.52.0.2371" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.7" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.7" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.7" />
