--- a/Template/Template.csproj
+++ b/Template/Template.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <PackageReference Include="Discord.Addons.Hosting" Version="3.0.0" />
+      <PackageReference Include="Discord.Addons.Interactive" Version="2.0.0" />
       <PackageReference Include="Discord.Net" Version="2.2.0" />
       <PackageReference Include="Discord.Net.Commands" Version="2.2.0" />
       <PackageReference Include="Discord.Net.Core" Version="2.2.0" />
