--- a/Template/Template.csproj
+++ b/Template/Template.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
@@ -7,11 +7,11 @@
 
     <ItemGroup>
       <PackageReference Include="Discord.Addons.Hosting" Version="3.0.0" />
-      <PackageReference Include="Discord.Addons.Interactive" Version="2.0.0" />
-      <PackageReference Include="Discord.Net" Version="2.2.0" />
-      <PackageReference Include="Discord.Net.Commands" Version="2.2.0" />
-      <PackageReference Include="Discord.Net.Core" Version="2.2.0" />
-      <PackageReference Include="Discord.Net.WebSocket" Version="2.2.0" />
+      <PackageReference Include="Discord.InteractivityAddon.Labs" Version="2.4.1-labs-20210709.1" />
+      <PackageReference Include="Discord.Net.Labs" Version="2.4.9" />
+      <PackageReference Include="Discord.Net.Labs.Commands" Version="2.3.5" />
+      <PackageReference Include="Discord.Net.Labs.Core" Version="2.4.6" />
+      <PackageReference Include="Discord.Net.Labs.WebSocket" Version="2.4.9" />
       <PackageReference Include="Google.Apis.Sheets.v4" Version="1.52.0.2371" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.7" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.7" />
