--- a/Template/Template.csproj
+++ b/Template/Template.csproj
@@ -17,6 +17,7 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.7" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.7" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.7" />
+      <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
     </ItemGroup>
 
     <ItemGroup>
