--- a/Template/Template.csproj
+++ b/Template/Template.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Dapper" Version="2.0.90" />
       <PackageReference Include="Discord.Addons.Hosting" Version="3.0.0" />
       <PackageReference Include="Discord.Net" Version="2.4.0" />
       <PackageReference Include="Discord.Net.Commands" Version="2.4.0" />
@@ -16,6 +17,7 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.7" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.7" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.7" />
+      <PackageReference Include="Octokit" Version="0.50.0" />
       <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
     </ItemGroup>
 
